--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.5.0+1
   shared_preferences: ^2.2.3
   toggle_switch: ^2.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -99,3 +100,4 @@ flutter:
 
   assets:
     - assets/bglogin.png
+    - assets/profile.jpg
